# task-manager

./: .cz.yaml  .pre-commit-config.yaml  404.html  index.html  mkdocs.yaml  requirements-dev.txt  sonar-project.properties
.github/workflows/: _build_image.yaml  _install_npm.yaml  _lint_python.yaml  _publish_doc.yml  _scan_static_code.yaml  build_backend.yaml  build_frontend.yaml  build_image.yaml  build_taskmanager.yaml  ci.yaml  filter_path.yaml  install_npm.yaml  lint_javascript.yaml  lint_python.yaml  nightly.yaml  on_pull_request_main.yaml  on_release.yaml  scan_bakcend.yaml  scan_code_vulnerability.yaml  scan_image_vulnerability.yaml  scan_vulnerabilities.yaml  scan_vulnerability.yaml  sonarqube.yaml  tmp.yml
about/: index.html
ci/: requirements-ci.txt
deploy/: docker-compose.yaml  local_setup_env.sh
docs/: about.md  index.md
search/: search_index.json
task-manager/backend/: .dockerignore  Dockerfile  pyproject.toml
task-manager/backend/app/: main.py
task-manager/frontend/: Dockerfile  app.js  eslint.config.js  index.html  package-lock.json  package.json
task-manager/frontend/src/: app.js
tools/: checkov_scan.sh  hadolint_scan.sh  sbom-report.cdx  trivy-scan  trivy-scan-image.sh  trivy-scan.sh
