[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "jinja2==2.10.1",
    "pydantic==2.10.3",
    "pyyaml==5.3.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]
