[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.0",
    "jinja2==3.1.6",
    "pydantic==2.10.3",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.40.0",
    "starlette==0.49.1"
]
